file(GLOB EXAMPLE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
MESSAGE( STATUS "TEST_SRC: " ${INCLUDE_DIRECTORIES} )

foreach( EXAMPLE_FILE ${EXAMPLE_FILES} )
  string( REPLACE ".cpp" "" EXAMPLE_NAME ${EXAMPLE_FILE} )
  add_executable( ${EXAMPLE_NAME} ${EXAMPLE_FILE})
  target_link_libraries(${EXAMPLE_NAME} ${ARMADILLO_LIBRARIES})
endforeach(EXAMPLE_FILE ${EXAMPLE_FILES})
